Update layout issues.

--- a/src/app/components/post/post/post.component.scss
+++ b/src/app/components/post/post/post.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   gap: .5rem;
   
-  border-top: 1px solid #e0e0e0;
+  border-bottom: 1px solid #efefef;
   padding: 1rem;
 
   .content {
