--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,4 +1,9 @@
+.container {
+  border-bottom: 1px solid #efefef;
+}
+
 .no__posts {
+  margin-top: 2rem;
   text-align: center;
   font-size: 1.3rem;
   color: #717171;
