--- a/src/app/shared/textarea/textarea.component.scss
+++ b/src/app/shared/textarea/textarea.component.scss
@@ -6,7 +6,7 @@
 
 .textarea-box {
   padding-top: 10px;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid #efefef;
 
   .textarea {
     outline: none;
